# tradingview-mac-rs

./: Cargo.toml  README.md
.github/: FUNDING.yml
src/: main.rs
